# rs-xml

./: CMakeLists.txt  README.md  rsxml.c  rsxml.h
include/: attr_t.h  rsconfig.h  rsutils.h  xml_lexer.h  xml_t.h
include/api/: xml_api.h
src/: attr_t.c  rsutils.c  xml_lexer.c  xml_t.c
src/api/: xml_api.c
tests/: CMakeLists.txt  dummy.xml  main.xml  test.c
